CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(swordandhorse)

SET(CMAKE_CXX_STANDARD 20)
SET(INSTALL_DIR "${PROJECT_BINARY_DIR}/build")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${INSTALL_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${INSTALL_DIR})

ADD_SUBDIRECTORY(domain)
ADD_SUBDIRECTORY(db)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(game)