CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(db)

SET(CMAKE_CXX_STANDARD 20)

ADD_LIBRARY(${PROJECT_NAME} SHARED
        src/db_wrapper.cc
)

FIND_PACKAGE(SQLite3 REQUIRED)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
        ${SQLite3_LIBRARIES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include
        PRIVATE ${SQLite3_INCLUDE_DIRS})

FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/paard en zwaard.db"
        DESTINATION ${INSTALL_DIR})
